--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,224 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: #e7f6ff;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+* {
+  font-family: "Inter", system-ui;
 }
+
+.wrapper {
+  background: #ffffff;
+  box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.04);
+  border-radius: 20px;
+  max-width: 1080px;
+  margin: 50px auto;
+}
+
+header {
+  border-bottom: 1px solid #eaeaea;
+}
+header img {
+  margin-right: 15px;
+}
+header h3,
+header p {
+  margin: 0;
+}
+header .logo {
+  width: 40px;
+  height: 40px;
+}
+header .icon {
+  width: 18px;
+  height: 18px;
+}
+
+.content h1 {
+  margin: 0;
+}
+
+.cartEmpty {
+  text-align: center;
+}
+.cartEmpty p {
+  width: 280px;
+  line-height: 24px;
+}
+.cartEmpty .greenButton {
+  width: 245px;
+  margin-top: 20px;
+}
+.cartEmpty .greenButton:hover img {
+  transform: rotate(180deg) translateX(3px);
+}
+.cartEmpty .greenButton img {
+  position: relative;
+  top: 1px;
+  transform: rotate(180deg);
+  margin-right: 15px;
+  transition: transform 0.15s ease-in-out;
+}
+
+.search-block {
+  border: 1px solid #f3f3f3;
+  border-radius: 10px;
+  padding: 0 15px;
+  position: relative;
+}
+.search-block .clear {
+  position: absolute;
+  right: 0;
+  width: 18px;
+  height: 18px;
+  top: 14px;
+  right: 15px;
+}
+.search-block input {
+  border: 0;
+  padding: 13px;
+  font-size: 16px;
+  width: 200px;
+}
+
+.cartTotalBlock ul {
+  display: block;
+  margin-bottom: 40px !important;
+}
+.cartTotalBlock ul li {
+  display: flex;
+  align-items: flex-end;
+  margin-bottom: 20px;
+}
+.cartTotalBlock ul li div {
+  flex: 1;
+  height: 1px;
+  border-bottom: 1px dashed #dfdfdf;
+  position: relative;
+  top: -4px;
+  margin: 0 7px;
+}
+.cartTotalBlock .greenButton {
+  position: relative;
+}
+.cartTotalBlock .greenButton:disabled {
+  animation: button-loading 0.6s ease-in-out infinite;
+}
+.cartTotalBlock .greenButton:hover img {
+  transform: translateX(5px);
+}
+.cartTotalBlock .greenButton img {
+  position: absolute;
+  right: 30px;
+  top: 20px;
+  transition: transform 0.15s ease-in-out;
+}
+
+.greenButton {
+  width: 100%;
+  height: 55px;
+  background: #9dd558;
+  border-radius: 18px;
+  border: 0;
+  color: #fff;
+  font-size: 16px;
+  font-weight: 500;
+  cursor: pointer;
+  transition: background 0.1s ease-in-out;
+}
+.greenButton:disabled {
+  background-color: #bebebe !important;
+  cursor: default;
+}
+.greenButton:hover {
+  background: #a9da6c;
+}
+.greenButton:active {
+  background: #91d044;
+}
+
+.cartItem {
+  border: 1px solid #f3f3f3;
+  border-radius: 20px;
+  overflow: hidden;
+  padding: 20px;
+}
+.cartItem .cartItemImg {
+  height: 70px;
+  width: 70px;
+  background-size: contain;
+  background-position: 0 -3px;
+  background-repeat: no-repeat;
+  margin-right: 20px;
+}
+.cartItem p {
+  font-size: 16px;
+  margin: 0;
+}
+.cartItem b {
+  font-size: 14px;
+}
+.cartItem .removeBtn {
+  opacity: 0.5;
+  cursor: pointer;
+  transition: opacity 0.15s ease-in-out;
+}
+.cartItem .removeBtn:hover {
+  opacity: 1;
+}
+
+@keyframes button-loading {
+  0% {
+    opacity: 1;
+  }
+  50% {
+    opacity: 0.7;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+.card {
+  border: 1px solid #f3f3f3;
+  padding: 30px;
+  width: 220px;
+  border-radius: 40px;
+  margin-right: 30px;
+  margin-bottom: 30px;
+  transition: box-shadow 0.2s ease-in-out, transform 0.2s ease-in-out;
+}
+.card .button {
+  background: #ffffff;
+  border: 1px solid #f2f2f2;
+  box-sizing: border-box;
+  border-radius: 8px;
+  height: 32px;
+  cursor: pointer;
+}
+.card .plus {
+  cursor: pointer;
+}
+.card:hover {
+  box-shadow: 0px 20px 35px rgba(0, 0, 0, 0.06);
+  transform: translateY(-5px);
+}
+.card .favorite {
+  position: absolute;
+  cursor: pointer;
+}
+.card span {
+  font-size: 13px;
+  opacity: 0.5;
+  text-transform: uppercase;
+}
+.card b {
+  font-size: 14px;
+}
+.card h5 {
+  font-weight: 400;
+  font-size: 14px;
+}
+
+/*# sourceMappingURL=index.css.map */
