--- a/src/components/Drawer/Drawer.module.css
+++ b/src/components/Drawer/Drawer.module.css
@@ -6,10 +6,6 @@
   height: 100%;
   background-color: rgba(0, 0, 0, 0.5);
   z-index: 1;
-  visibility: hidden;
-  opacity: 0;
-  transition: opacity 0.1s ease-out, visibility 0.1s ease-out;
-  overflow: hidden;
 }
 
 .overlayVisible {
@@ -23,6 +19,7 @@
 .drawer {
   display: flex;
   flex-direction: column;
+  justify-content: space-between;
   position: absolute;
   width: 420px;
   height: 100%;
