--- a/src/components/Drawer/Drawer.module.scss
+++ b/src/components/Drawer/Drawer.module.scss
@@ -6,10 +6,10 @@
   height: 100%;
   background-color: rgba(0, 0, 0, 0.5);
   z-index: 1;
-  visibility: hidden;
-  opacity: 0;
-  transition: opacity 0.1s ease-out, visibility 0.1s ease-out;
-  overflow: hidden;
+  //visibility: hidden;
+  //opacity: 0
+  //transition: opacity 0.1s ease-out, visibility 0.1s ease-out;
+  //overflow: hidden;
 }
 
 .overlayVisible {
@@ -21,9 +21,10 @@
   }
 }
 
-.drawer {
+.drawer{
   display: flex;
   flex-direction: column;
+  justify-content: space-between;
   position: absolute;
   width: 420px;
   height: 100%;
