--- a/src/index.scss
+++ b/src/index.scss
@@ -114,6 +114,7 @@ header {
         margin: 0 7px;
       }
     }
+
   }
 
   .greenButton {
@@ -169,6 +170,10 @@ header {
   border-radius: 20px;
   overflow: hidden;
   padding: 20px;
+  margin-bottom: 20px;
+  &:last-child{
+    margin-bottom: 0;
+  }
 
   .cartItemImg {
     height: 70px;
@@ -188,14 +193,14 @@ header {
     font-size: 14px;
   }
 
-  .removeBtn {
-    opacity: 0.5;
-    cursor: pointer;
-    transition: opacity 0.15s ease-in-out;
+}
+.removeBtn {
+  opacity: 0.5;
+  cursor: pointer;
+  transition: opacity 0.15s ease-in-out;
 
-    &:hover {
-      opacity: 1;
-    }
+  &:hover {
+    opacity: 1;
   }
 }
 
@@ -257,4 +262,10 @@ header {
     font-weight: 400;
     font-size: 14px;
   }
+}
+
+.items { //це треба буде видалити
+  flex: 1;
+  overflow: auto;
+  margin-bottom: 40px;
 }
