--- a/src/index.scss
+++ b/src/index.scss
@@ -264,8 +264,8 @@ header {
   }
 }
 
-.items { //це треба буде видалити
-  //flex: 1;
-  overflow: auto;
-  margin-bottom: 40px;
-}
+//.items { //це треба буде видалити
+//  //flex: 1;
+//  overflow: auto;
+//  margin-bottom: 40px;
+//}
