--- a/src/components/Drawer/Drawer.module.css
+++ b/src/components/Drawer/Drawer.module.css
@@ -6,10 +6,6 @@
   height: 100%;
   background-color: rgba(0, 0, 0, 0.5);
   z-index: 1;
-  visibility: hidden;
-  opacity: 0;
-  transition: opacity 0.1s ease-out, visibility 0.1s ease-out;
-  overflow: hidden;
 }
 
 .overlayVisible {
@@ -31,11 +27,10 @@
   background: #ffffff;
   box-shadow: -10px 4px 24px rgba(0, 0, 0, 0.1);
   padding: 30px;
-  transform: translateX(100%);
   transition: transform 0.3s ease-out;
 }
 .drawer .items {
-  flex: 1;
+  flex: 0 1 auto;
   overflow: auto;
   margin-bottom: 40px;
 }
