--- a/src/components/Card/Card.module.css
+++ b/src/components/Card/Card.module.css
@@ -7,6 +7,10 @@
   margin-bottom: 30px;
   transition: box-shadow 0.2s ease-in-out, transform 0.2s ease-in-out;
 }
+.card:hover {
+  box-shadow: 0px 20px 35px rgba(0, 0, 0, 0.06);
+  transform: translateY(-5px);
+}
 .card .plus {
   cursor: pointer;
 }
